--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,49 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.item {
+  list-style: none;
+  text-align: center;
+  padding-bottom: 6px;
+  font-size: 14px;
+}
+
+.item > div {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.item button{
+  text-align: right;
+}
+
+.name {
+  width: 350px;
+  display: inline-block;
+  text-align: left;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.price {
+  text-align: right;
+  display: inline-block;
+  width: 100px;
+}
+
+.item.super-sale .name:before {
+  content: 'S';
+  background-color: red;
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  font-size: 10px;
+  border-radius: 2px;
+  color: white;
+  padding: 2px;
+  position: absolute;
+  left: -24px;
+  text-align: center;
+  top: 0px;
+}
